--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.microsoft.projectoxford:face:1.4.3'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
